--- a/hatch.toml
+++ b/hatch.toml
@@ -3,8 +3,11 @@ packages = [
     "pyroll" # place your package in the pyroll namespace
 ]
 
+[metadata]
+allow-direct-references = true
+
 [version]
-path = "pyroll/lee_flow_stress/__init__.py"
+path = "pyroll/lee_flow_stress.py"
 
 [envs.default]
 path = ".venv"
@@ -17,10 +20,14 @@ dependencies = [
 [envs.docs]
 path = ""
 dependencies = [
+    "pygments ~= 2.0",
+    "pytask",
+    "pytask-latex",
+    "matplotlib"
 ]
 
 [envs.docs.scripts]
-build = "pandoc -o docs/docs.pdf docs/docs.md"
+build = "python -m pytask" # compile LaTeX docs with latexmk
 
 [envs.test]
 path = ""
