--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,7 @@ classifiers = [
 
 requires-python = ">=3.9, <4.0"
 dependencies = [
-    "pyroll-core",
-    "pyroll-interface-material"
+    "pyroll-core"
 ]
 
 dynamic = ["version"]
